--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,6 +1,7 @@
 
 .Footer {
   background-color: black;
+  border-block: 1px solid white;
   .Footer-link-wrap {
     display: flex;
     justify-content: center;
