--- a/src/styles/Skills.scss
+++ b/src/styles/Skills.scss
@@ -3,9 +3,10 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color: aqua;
+  background-color: black;
   padding-block: 100px;
   max-width: 100vw;
+  border-block: 1px solid white;
   #Skills-title {
     padding-bottom: 50px;
     display: flex;
