--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @import './Experience.scss';
 @import './Projects.scss';
 @import './Header.scss';
+@import './Hobbies.scss';
 
 * {
   box-sizing: border-box;
