--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -35,14 +35,14 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        .Project4-skill-container, .Project3-skill-container, .Project2-skill-container, .Project1-skill-container {
+        .Project5-skill-container, .Project4-skill-container, .Project3-skill-container, .Project2-skill-container, .Project1-skill-container {
           margin-inline: 10px;
           margin-block: 10px;
         }
       }
   
     }
-    .Project-4-description, .Project-3-description, .Project-2-description, .Project-1-description {
+    .Project-5-description, .Project-4-description, .Project-3-description, .Project-2-description, .Project-1-description {
       display: flex;
       // justify-content: space-between;
       flex-direction: column;
@@ -62,12 +62,55 @@
     display: flex;
     flex-direction: row;
   }
+
+  .prev {
+    width: 0;
+    height: 0;
+    position: relative;
+    color: black;
+    font-size: 3rem;
+    // top: 45%;
+    margin: 0;
+    cursor: pointer;
+    &:hover {
+      color: grey;
+    }
+  }
+  .next {
+    width: 0;
+    height: 0;
+    position: relative;
+    color: black;
+    font-size: 3rem;
+    right:6%;
+    // top: 45%;
+    margin: 0;
+    cursor: pointer;
+    &:hover {
+      color: grey;
+    }
+  }
+  #project5-img {
+    padding-block: 45px;
+  }
+  .Project-5-img-div {
+    align-items: center;
+  }
+  
 }
 
 @media screen and (min-width: 1260px) {
   #Project1-video {
     padding-block: 45px;
   }
+}
+@media screen and (max-width: 940px) {
+.Project-5-img-div {
+  max-height: 300px;
+  align-items: center;
+  align-self: center;
+}
+
 }
 
 @media screen and (max-width: 824px) {
@@ -85,6 +128,23 @@
         justify-content: center;
       }
     }
+    // .next, .prev {
+    //   top: 150px;
+    // }
+    #project5-img {
+      padding-block: 30px;
+    }
+    .Project-5-img-div {
+      max-height: none;
+    }
+  }
+  
+}
 
+@media screen and (max-width: 560px) {
+  .Project-page {
+    // .next, .prev {
+    //   top: 100px;
+    // }
   }
 }
